add vendor page

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "jsonwebtoken": "^7.4.2",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.4",
     "morgan": "^1.8.0",
+    "node-geocoder": "^3.20.0",
     "node-inspector": "^1.1.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
